RESOLVED FIXED55346
NativeError.prototype objects have [[Class]] of "Object" but should be "Error"
https://bugs.webkit.org/show_bug.cgi?id=55346
Summary NativeError.prototype objects have [[Class]] of "Object" but should be "Error"
Mark S. Miller
Reported 2011-02-27 20:21:21 PST
> ({}).toString.call(Error.prototype) [object Error] > ({}).toString.call(RangeError.prototype) [object Object] The first is correct. The second should be the same. This is true for all the built-in *Error prototypes that inherit from Error.prototype. Classifying as trivial because it's hard to imagine anything would care. If closed as wont-fix, please tag as DeliberateSpecViolation or some such so we can track.
Attachments
The patch (6.04 KB, patch)
2011-07-15 15:00 PDT, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2011-07-15 15:00:54 PDT
Created attachment 101048 [details] The patch
Gavin Barraclough
Comment 2 2011-07-15 15:03:34 PDT
Fixed in r91116
Gavin Barraclough
Comment 3 2011-08-12 01:12:16 PDT
*** Bug 41602 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.