NativeError.prototype objects have [[Class]] of "Object" but should be "Error" https://bugs.webkit.org/show_bug.cgi?id=55346

Reviewed by Sam Weinig.

Source/JavaScriptCore:

* runtime/ErrorPrototype.cpp:
(JSC::ErrorPrototype::ErrorPrototype):
    - Switch to putDirect since we're not the only ones tranitioning this Structure now.
* runtime/NativeErrorPrototype.cpp:
(JSC::NativeErrorPrototype::NativeErrorPrototype):
* runtime/NativeErrorPrototype.h:
    - Switch base class to ErrorPrototype.

LayoutTests:

Added test case.

* fast/js/native-error-prototype-expected.txt: Added.
* fast/js/native-error-prototype.html: Added.
* fast/js/script-tests/native-error-prototype.js: Added.



Canonical link: https://commits.webkit.org/80371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91116 268f45cc-cd09-0410-ab3c-d52691b4dbfc